--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "bootstrap": "^4.5.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
+    "ngx-slick-carousel": "^0.5.1",
     "rxjs": "~6.4.0",
+    "slick-carousel": "^1.8.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
