--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
+    "ngx-embed-video": "^1.0.4",
     "ngx-slick-carousel": "^0.5.1",
     "rxjs": "~6.4.0",
     "slick-carousel": "^1.8.1",
