--- a/angular.json
+++ b/angular.json
@@ -35,7 +35,8 @@
               "node_modules/font-awesome/css/font-awesome.css",
               "node_modules/slick-carousel/slick/slick.scss",
               "node_modules/slick-carousel/slick/slick-theme.scss",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/swiper/swiper.scss"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
