--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "jquery": "^3.6.3",
     "ngx-embed-video": "^1.0.4",
     "ngx-slick-carousel": "^0.6.0",
+    "ngx-useful-swiper": "^10.0.1",
     "rxjs": "~7.5.0",
     "slick-carousel": "^1.8.1",
+    "swiper": "^6.8.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -39,6 +41,7 @@
     "@angular/compiler-cli": "~13.3.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "@types/swiper": "^6.0.0",
     "codelyzer": "^6.0.2",
     "http-server": "^14.1.1",
     "jasmine-core": "~4.0.0",
