--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "jquery": "^3.5.1",
     "ngx-embed-video": "^1.0.4",
     "ngx-slick-carousel": "^0.5.1",
+    "ngx-useful-swiper": "^8.0.0",
+    "swiper": "^5.4.5",
+    "@emailjs/browser": "^3.2.0",
     "rxjs": "~6.4.0",
     "slick-carousel": "^1.8.1",
     "tslib": "^1.9.0",
