--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "ngx-slick-carousel": "^0.5.1",
     "ngx-useful-swiper": "^8.0.0",
     "swiper": "^5.4.5",
-    "@emailjs/browser": "^3.2.0",
+    "@emailjs/browser": "3.2.0",
     "rxjs": "~6.4.0",
     "slick-carousel": "^1.8.1",
     "tslib": "^1.9.0",
